Implementando PUT, DELET e GET para Cliente
1 - Criando ClienteDTO;