@@ -2,7 +2,6 @@ package br.com.cdm.cursomc.resources;
 
 import java.net.URI;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.data.domain.Page;
 import org.springframework.http.ResponseEntity;
@@ -63,7 +62,7 @@ public class CategoriaResource {
 	@GetMapping
 	public ResponseEntity<List<CategoriaDTO>> findAll() {
 		List<Categoria> list = this.categoriaService.findAll();
-		List<CategoriaDTO> listDTO =  list.stream().map(CategoriaDTO::new).collect(Collectors.toList());
+		List<CategoriaDTO> listDTO =  list.stream().map(CategoriaDTO::new).toList();
 		return ResponseEntity.ok().body(listDTO);
 	}
 	
